Fix selected class style on mobile browsers

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -198,6 +198,11 @@ h2 {
         color: $white;
         background-color: $light-grey;
     }
+
+    &.selected {
+        color: $white;
+        background-color: $primary;
+    }
 }
 
 .submit-container {
@@ -223,10 +228,7 @@ h2 {
     }
 }
 
-.selected {
-    color: $white;
-    background-color: $primary;
-}
+
 
 .thank-you-header {
     text-align: center;
